--- a/index.html
+++ b/index.html
@@ -124,16 +124,18 @@
         </div>
       </form>
       <div class="footer">
-        this project was coded by
+        coded by
         <a
           href="https://www.shecodes.io/graduates/67814-fatemeh-ahmadi"
           target="_blank"
           >Fatemeh Ahmadi</a
         >
-        and is
-        <a href="https://github.com/fatemeh133/Site" target="_blank"
-          >open-sourced on GitHub</a
-        >open-sourced on GitHub and hosted on Netlify
+        -
+        <a href="https://github.com/fatemeh133/Site" target="_blank">GitHub</a>
+        -
+        <a href="https://lively-cobbler-c9dd0a.netlify.app" target="_blank"
+          >Netlify</a
+        >
       </div>
     </div>
   </body>
