edit link underline

--- a/index.html
+++ b/index.html
@@ -126,14 +126,23 @@
       <div class="footer">
         coded by
         <a
+          class="no-underline"
           href="https://www.shecodes.io/graduates/67814-fatemeh-ahmadi"
           target="_blank"
           >Fatemeh Ahmadi</a
         >
         -
-        <a href="https://github.com/fatemeh133/Site" target="_blank">GitHub</a>
+        <a
+          href="https://github.com/fatemeh133/Site"
+          target="_blank"
+          class="no-underline"
+          >GitHub</a
+        >
         -
-        <a href="https://lively-cobbler-c9dd0a.netlify.app" target="_blank"
+        <a
+          href="https://lively-cobbler-c9dd0a.netlify.app"
+          target="_blank"
+          class="no-underline"
           >Netlify</a
         >
       </div>
