--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap"
       rel="stylesheet"
     />
-    <title>Weather App</title>
+    <title>Pink Weather App</title>
   </head>
   <body>
     <div class="container rounded col-5 border-2">
